lab1/Test/L1-A-6-73.output
Error Type A at Line 2
Error Type B at Line 5
Error Type B at Line 6
Error Type B at Line 6
Error Type B at Line 7
Error Type B at Line 8
Error Type A at Line 18
