lab1/Test/L1-A-6-73.cmm
int rWuSQ0IVdqd7 
;$
float J8 ( float P0hnVs6tUQX0Bql2W ) {
  if ( - RBWEhXDxCGxlLCDiHB = heaP0CuKbD6oR5 )   fQqd4SdbqQcbV 
    struct ;
else   if ujxnq9 )   if ( . ZJPdYfeeJDbThWDQ )   if 
    ( UMX_Tt9rC )   if ( KEO )   if ( bRXVJ ) ==   if 
    ( gA ) <   sFOajTgJlJid1jP8pBb ;







  while ( pDDM1taOgiZfeez )   ZM1j6Qx1dEfTuOg ;

  return rBWYhn9 ';
}
